-- Remember to use PostgreSQL syntax in this file or else it won't work!
-- LOCAL DEVELOPMENT ONLY - Not used in production

-- schema for realization
DROP TABLE IF EXISTS realizations CASCADE;
CREATE TABLE realizations (
    id SERIAL PRIMARY KEY,
    realization_identifier UUID NOT NULL UNIQUE,
    realization_name VARCHAR(255) NOT NULL,
    location VARCHAR(255) NOT NULL,
    description TEXT NOT NULL,
    image_identifier VARCHAR(255),
    number_of_rooms INTEGER NOT NULL,
    number_of_bedrooms INTEGER NOT NULL,
    number_of_bathrooms INTEGER NOT NULL,
    construction_year INTEGER NOT NULL
);

-- schema for footer
DROP TABLE IF EXISTS footer_content CASCADE;
DROP TABLE IF EXISTS projects CASCADE;

CREATE TABLE footer_content (
    id SERIAL PRIMARY KEY,
    section VARCHAR(50) NOT NULL,
    label VARCHAR(100) NOT NULL,
    value TEXT NOT NULL,
    display_order INT NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX idx_footer_section ON footer_content(section);
CREATE INDEX idx_footer_display_order ON footer_content(display_order);

-- schema for projects
CREATE TABLE projects (
    project_id BIGSERIAL PRIMARY KEY,
    project_identifier VARCHAR(255) NOT NULL UNIQUE,
    project_name VARCHAR(255) NOT NULL,
    project_description TEXT,
    status VARCHAR(50) NOT NULL,
    start_date DATE NOT NULL,
    end_date DATE,
    completion_date DATE,
    primary_color VARCHAR(7) NOT NULL,
    tertiary_color VARCHAR(7) NOT NULL,
    buyer_color VARCHAR(7) NOT NULL,
    buyer_name VARCHAR(255),
    image_identifier VARCHAR(255),
    customer_id VARCHAR(255),
    contractor_id VARCHAR(255),
    salesperson_id VARCHAR(255),
    location VARCHAR(500),
    lot_identifier VARCHAR(255) NOT NULL,
    progress_percentage INT,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX idx_project_identifier ON projects(project_identifier);
CREATE INDEX idx_project_status ON projects(status);
CREATE INDEX idx_project_customer_id ON projects(customer_id);
CREATE INDEX idx_project_start_date ON projects(start_date);
CREATE INDEX idx_project_end_date ON projects(end_date);

-- Lots table
DROP TABLE IF EXISTS lots CASCADE;
CREATE TABLE lots (
    id BIGSERIAL PRIMARY KEY UNIQUE NOT NULL,
    lot_identifier UUID UNIQUE NOT NULL,
    lot_number VARCHAR(255) NOT NULL,
    civic_address VARCHAR(255),
    price REAL,
    dimensions_square_feet VARCHAR(255) NOT NULL,
    dimensions_square_meters VARCHAR(255) NOT NULL,
    lot_status VARCHAR(50) NOT NULL DEFAULT 'AVAILABLE',
    project_id VARCHAR(255) NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_lots_projects FOREIGN KEY (project_id) REFERENCES projects(project_identifier) ON DELETE CASCADE
);

CREATE INDEX idx_lots_project_id ON lots(project_id);
CREATE INDEX idx_lots_lot_identifier ON lots(lot_identifier);

-- Schedules table
DROP TABLE IF EXISTS schedules CASCADE;
CREATE TABLE schedules (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    schedule_identifier VARCHAR(255) UNIQUE NOT NULL,
    schedule_start_date DATE NOT NULL,
    schedule_end_date DATE NOT NULL,
    schedule_description VARCHAR(500) NOT NULL,
    lot_number VARCHAR(50) NOT NULL,
    project_id VARCHAR(255) NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP WITHOUT TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (project_id) REFERENCES projects(project_identifier) ON DELETE CASCADE
);

CREATE INDEX IF NOT EXISTS idx_schedule_identifier ON schedules(schedule_identifier);
CREATE INDEX IF NOT EXISTS idx_schedule_start_date ON schedules(schedule_start_date);
CREATE INDEX IF NOT EXISTS idx_schedule_project_id ON schedules(project_id);

-- Users table
DROP TABLE IF EXISTS users CASCADE;
CREATE TABLE users (
    user_id UUID PRIMARY KEY,
    first_name VARCHAR(255) NOT NULL,
    last_name VARCHAR(255) NOT NULL,
    email VARCHAR(255) NOT NULL,
    secondary_email VARCHAR(255),
    phone VARCHAR(255),
    user_role VARCHAR(50) NOT NULL,
    user_status VARCHAR(50) NOT NULL DEFAULT 'ACTIVE',
    auth0user_id VARCHAR(255),
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX idx_user_status ON users(user_status);

-- Tasks table
DROP TABLE IF EXISTS tasks CASCADE;
CREATE TABLE tasks (
    id SERIAL PRIMARY KEY,
    task_identifier VARCHAR(255) UNIQUE NOT NULL,
    task_status VARCHAR(50) NOT NULL,
    task_title VARCHAR(255) NOT NULL,
    period_start DATE,
    period_end DATE,
    task_description TEXT,
    task_priority VARCHAR(50),
    estimated_hours NUMERIC(10, 2),
    hours_spent NUMERIC(10, 2),
    task_progress NUMERIC(5, 2),
    assigned_user_id UUID,
    schedule_id VARCHAR(255) NOT NULL,
    FOREIGN KEY (assigned_user_id) REFERENCES users(user_id) ON DELETE SET NULL,
    FOREIGN KEY (schedule_id) REFERENCES schedules(schedule_identifier) ON DELETE CASCADE
);

CREATE INDEX IF NOT EXISTS idx_task_identifier ON tasks(task_identifier);
CREATE INDEX IF NOT EXISTS idx_task_status ON tasks(task_status);
CREATE INDEX IF NOT EXISTS idx_assigned_user_id ON tasks(assigned_user_id);

-- Project overview content
DROP TABLE IF EXISTS project_overview_content CASCADE;
DROP TABLE IF EXISTS project_features CASCADE;
DROP TABLE IF EXISTS project_gallery_images CASCADE;

CREATE TABLE project_overview_content (
    id BIGSERIAL PRIMARY KEY,
    project_identifier VARCHAR(255) NOT NULL UNIQUE,
    hero_title VARCHAR(500) NOT NULL,
    hero_subtitle VARCHAR(1000),
    hero_description TEXT,
    overview_section_title VARCHAR(300),
    overview_section_content TEXT,
    features_section_title VARCHAR(300),
    location_section_title VARCHAR(300),
    location_description TEXT,
    location_address VARCHAR(500),
    location_map_embed_url TEXT,
    gallery_section_title VARCHAR(300),
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    location_latitude DOUBLE PRECISION,
    location_longitude DOUBLE PRECISION,
    FOREIGN KEY (project_identifier) REFERENCES projects(project_identifier) ON DELETE CASCADE
);

CREATE TABLE project_features (
    id BIGSERIAL PRIMARY KEY,
    project_identifier VARCHAR(255) NOT NULL,
    feature_title VARCHAR(200) NOT NULL,
    feature_description TEXT,
    display_order INT NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (project_identifier) REFERENCES projects(project_identifier) ON DELETE CASCADE
);

CREATE TABLE project_gallery_images (
    id BIGSERIAL PRIMARY KEY,
    project_identifier VARCHAR(255) NOT NULL,
    image_identifier VARCHAR(255) NOT NULL,
    image_caption VARCHAR(300),
    display_order INT NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (project_identifier) REFERENCES projects(project_identifier) ON DELETE CASCADE
);

CREATE INDEX idx_project_features_identifier ON project_features(project_identifier);
CREATE INDEX idx_project_gallery_identifier ON project_gallery_images(project_identifier);

-- Renovations
DROP TABLE IF EXISTS renovations CASCADE;
CREATE TABLE renovations (
    id SERIAL PRIMARY KEY,
    renovation_identifier VARCHAR(255) NOT NULL,
    before_image_identifier VARCHAR(255),
    after_image_identifier VARCHAR(255),
    description TEXT NOT NULL
);

-- Project management page content
DROP TABLE IF EXISTS project_management_page_content CASCADE;
CREATE TABLE project_management_page_content (
    id BIGSERIAL PRIMARY KEY,
    language VARCHAR(10) NOT NULL UNIQUE,
    content_json TEXT NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX idx_pm_content_language ON project_management_page_content(language);

-- App theme
DROP TABLE IF EXISTS app_theme CASCADE;
CREATE TABLE app_theme (
    id SERIAL PRIMARY KEY,
    theme_name VARCHAR(50) UNIQUE NOT NULL,
    primary_color VARCHAR(7) NOT NULL,
    secondary_color VARCHAR(7) NOT NULL,
    accent_color VARCHAR(7) NOT NULL,
    card_background VARCHAR(7) NOT NULL,
    background_color VARCHAR(7) NOT NULL,
    text_primary VARCHAR(7) NOT NULL,
    white VARCHAR(7) NOT NULL,
    border_radius VARCHAR(20) DEFAULT '8px',
    box_shadow TEXT DEFAULT '0 2px 8px rgba(0,0,0,0.1)',
    transition TEXT DEFAULT 'all 0.3s ease',
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- Analytics reports
CREATE TABLE IF NOT EXISTS analytics_reports (
    id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    owner_id UUID NOT NULL,
    report_type VARCHAR(50) NOT NULL,
    file_format VARCHAR(10) NOT NULL,
    file_key VARCHAR(500) NOT NULL,
    file_size BIGINT NOT NULL,
    generation_timestamp TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    start_date TIMESTAMP,
    end_date TIMESTAMP,
    status VARCHAR(50) NOT NULL DEFAULT 'COMPLETED',
    metadata JSONB,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

-- schema for inquiries
DROP TABLE IF EXISTS inquiries CASCADE;
CREATE TABLE inquiries (
    id BIGSERIAL PRIMARY KEY,
    name VARCHAR(150) NOT NULL,
    email VARCHAR(200) NOT NULL,
    phone VARCHAR(30),
    message VARCHAR(1000) NOT NULL,

    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX idx_inquiries_created_at ON inquiries(created_at DESC);

-- ============================================================================
-- Quote System Schema
-- ============================================================================

-- Quotes Table
-- Stores all quotes created by contractors for projects
DROP TABLE IF EXISTS quote_line_items CASCADE;
DROP TABLE IF EXISTS quotes CASCADE;

CREATE TABLE quotes (
    quote_id BIGSERIAL PRIMARY KEY,
    quote_number VARCHAR(15) NOT NULL UNIQUE,
    project_identifier VARCHAR(255) NOT NULL,
    contractor_id VARCHAR(255) NOT NULL,
    total_amount DECIMAL(15,2) NOT NULL DEFAULT 0.00,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_quote_project 
        FOREIGN KEY (project_identifier) 
        REFERENCES projects(project_identifier) 
        ON DELETE RESTRICT
);

CREATE INDEX idx_quote_number ON quotes(quote_number);
CREATE INDEX idx_quote_project ON quotes(project_identifier);
CREATE INDEX idx_quote_contractor ON quotes(contractor_id);
CREATE INDEX idx_quote_created_at ON quotes(created_at);

-- Quote Line Items Table
-- Stores individual line items for each quote
CREATE TABLE quote_line_items (
    line_item_id BIGSERIAL PRIMARY KEY,
    quote_id BIGINT NOT NULL,
    CONSTRAINT fk_line_item_quote 
        FOREIGN KEY (quote_id) 
        REFERENCES quotes(quote_id) 
        ON DELETE CASCADE,
    item_description VARCHAR(500) NOT NULL,
    quantity NUMERIC(10,2) NOT NULL,
    rate DECIMAL(15,2) NOT NULL,
    line_total DECIMAL(15,2) NOT NULL,
    display_order INTEGER NOT NULL
);

CREATE INDEX idx_line_item_quote ON quote_line_items(quote_id);
CREATE INDEX idx_line_item_order ON quote_line_items(display_order);
